model-serving/cpu/vllm-granite-chat/02-vllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-cpu-service
  namespace: rhel-ai-chat
  labels:
    app: vllm-cpu-server
    component: model-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: vllm-cpu-server
